# circuit-unoptimization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-automerge.yml
QAOA/: run_QAOA_ZNE.py
Quantum_Volume_scripts/: circuit_unoptimization.py  run_ZNE.py  utils.py
notebooks/: elemetary_recipe.ipynb  unoptimization_recipe.ipynb  zne_benchmarks.ipynb  zne_via_unopt.ipynb
tests/: __init__.py  conftest.py  test_circuit.py  test_circuits.py  test_generator.py  test_noise.py  test_noise_models.py  test_qaoa.py  test_qem.py  test_qv.py  test_recipe.py  test_utils.py
unopt/: __init__.py  benchmark.py  benchmarking.py  circuit.py  circuits.py  generator.py  noise.py  noise_models.py  plots.py  qaoa.py  qem.py  quantum_volume.py  qv.py  recipe.py  utils.py
