[tool.poetry]
name = "unopt"
version = "0.1.0"
description = ""
authors = ["vprusso <vincentrusso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
qiskit = "^1.4.0"
numpy = ">=1.22,<2.0"
mitiq = "^0.43.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
pylatexenc = "^2.10"
ply = "^3.11"
qiskit-aer = "^0.16.1"
scikit-learn = "^1.6.1"
pre-commit = "^4.1.0"
notebook = "7.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.7"
mypy = "^1.14.1"
pytest-mypy-plugins = "^3.2.0"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true  # Avoid errors for missing stubs for some libraries
check_untyped_defs = true      # Warn about untyped function definitions
disallow_untyped_calls = true  # Disallow calling functions without type hints
disallow_untyped_defs = true   # Disallow functions without type hints
show_error_codes = true        # Show error codes in output

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
